--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,13 @@
 @import "tailwindcss";
+
 @utility bg-main-dark {
   background-color: #1b1b1f;
+}
+@utility bg-secondary-dark {
+  background-color: #272a2f;
+}
+@utility bg-secondary-light {
+  background-color: #eff0f3;
 }
 @utility text-highlight {
   color: #8b40c6;
@@ -11,7 +18,9 @@
 @utility title-light {
   color: #dfdfd6;
 }
+
 @custom-variant dark (&:where(.dark, .dark *));
+
 @font-face {
   font-family: "Inter";
   src: url("/fonts/Inter_18pt-Regular.ttf");
@@ -24,11 +33,77 @@
   font-weight: 400;
   font-style: normal;
 }
+
 @theme {
   --font-inter: Inter, sans-serif;
   --font-mincho: Mincho, sans-serif;
 }
 
+* {
+  transition: 0.3s;
+}
 [data-cloak] {
   display: none !important;
+}
+input {
+  display: none;
+}
+.display {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+}
+label {
+  width: 50px;
+  height: 25px;
+  border-radius: 20px;
+  background-color: #eff0f3;
+  box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.05) inset;
+  cursor: pointer;
+  position: relative;
+}
+.circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: white;
+  position: absolute;
+  top: 50%;
+  left: 0%;
+  transform: translate(10%, -50%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+}
+svg {
+  width: 18px;
+  position: absolute;
+}
+.sun {
+  color: #ffd600;
+  margin-left: 0%;
+  opacity: 1;
+}
+.moon {
+  margin-left: -150%;
+  color: white;
+  opacity: 0;
+}
+input[type="checkbox"]:checked + .display label {
+  background: #272a2f;
+}
+input[type="checkbox"]:checked + .display label .circle {
+  left: 100%;
+  transform: translate(-110%, -50%);
+  background: #000000;
+}
+input[type="checkbox"]:checked + .display label .circle .sun {
+  margin-left: 150%;
+  opacity: 0;
+}
+input[type="checkbox"]:checked + .display label .circle .moon {
+  margin-left: 0%;
+  opacity: 1;
 }
