--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,6 +12,12 @@
 @utility text-highlight {
   color: #8b40c6;
 }
+@utility bg-highlight {
+  background-color: #8b40c6;
+}
+@utility border-highlight {
+  border-color: #8b40c6;
+}
 @utility title-dark {
   color: #dfdfd6;
 }
@@ -37,7 +43,8 @@
 @theme {
   --font-inter: Inter, sans-serif;
   --font-mincho: Mincho, sans-serif;
-  --breakpoint-xs: 520px;
+  --breakpoint-xs: 590px;
+  --breakpoint-2xs: 320px;
 }
 
 * {
