add animation in intro section

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -118,3 +118,6 @@ input[type="checkbox"]:checked + .display label .circle .moon {
 .nav-border-bottom {
   @apply border-b border-gray-300 dark:border-black;
 }
+.social-icon {
+  @apply w-[24px] h-[24px] flex justify-center items-center opacity-0;
+}
