add contact section

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -132,11 +132,11 @@ input[type="checkbox"]:checked + .display label .circle .moon {
   margin-left: 0%;
   opacity: 1;
 }
-
 .marquee-wrapper {
   margin-inline: auto;
   position: relative;
-  height: 100px;
+  height: 40px;
+  padding: 7px 0px;
   overflow: hidden;
   mask-image: linear-gradient(
     to right,
@@ -146,13 +146,11 @@ input[type="checkbox"]:checked + .display label .circle .moon {
     rgba(0, 0, 0, 0)
   );
 }
-
 @keyframes scrollLeft {
   to {
     left: -180px;
   }
 }
-
 .marquee-item {
   width: 180px;
   position: absolute;
@@ -163,31 +161,27 @@ input[type="checkbox"]:checked + .display label .circle .moon {
   animation-iteration-count: infinite;
   @apply text-lg font-bold;
 }
-
 .item1 {
   animation-delay: calc(30s / 7 * (7 - 1) * -1);
 }
-
 .item2 {
   animation-delay: calc(30s / 7 * (7 - 2) * -1);
 }
-
 .item3 {
   animation-delay: calc(30s / 7 * (7 - 3) * -1);
 }
-
 .item4 {
   animation-delay: calc(30s / 7 * (7 - 4) * -1);
 }
-
 .item5 {
   animation-delay: calc(30s / 7 * (7 - 5) * -1);
 }
-
 .item6 {
   animation-delay: calc(30s / 7 * (7 - 6) * -1);
 }
-
 .item7 {
   animation-delay: calc(30s / 7 * (7 - 7) * -1);
+}
+.marquee-wrapper:hover .marquee-item {
+  animation-play-state: paused;
 }
